user text input improved